2006-11-16 Harri Pitkänen <hatapitk@iki.fi>

        * Support parallel installations of Automake versions
          1.9 and 1.10. Both seem to work, but default will still
          be 1.9.

2006-11-11 Harri Pitkänen  <hatapitk@iki.fi>

	* Use iconv charset "UCS-2-INTERNAL" instead of "WCHAR_T" on Windows,
	  because not every version of libiconv supports WCHAR_T.
	* Fixes to configure.ac and src/Makefile.am to better support linking
	  against shared libraries on Windows.

2006-10-27 Harri Pitkänen  <hatapitk@iki.fi>

	* Implement version checking for malaga project files.

2006-10-26 Harri Pitkänen  <hatapitk@iki.fi>

	* Clean up library checks in configure.ac, remove special check
	  for malaga shared library.
	* Add AC_LIBTOOL_WIN32_DLL to configure.ac to help building
	  shared libraries on Windows.

2006-10-05 Harri Pitkänen  <hatapitk@iki.fi>

	* Add missing 'const' to usage example in voikko.h.
	* Add new exported function init_libvoikko_with_path.
	* Adjust voikkospell and voikkohyhenate to accept new -p option that
	  can be used to set the dictionary path.
	* Improve manual page formatting.
	* Increase version to 1.2 and libtool version info to 3:0:2.

2006-09-26 Harri Pitkänen  <hatapitk@iki.fi>

	* Increase LIBVOIKKO_MAX_WORD_CHARS back to 255, the issue with
	  complicated compound words is now properly fixed in Malaga and
	  Suomi-malaga.
	* Fix suggestions when VOIKKO_OPT_IGNORE_DOT is set and word has only
	  one character before the dot.
	* Prepare some suggestion functions to accept strings that are not
	  null terminated.
	* Markup fix for voikkospell.1, thanks to Timo Jyrinki
	* Increase version to 1.1.1.

2006-09-14 Harri Pitkänen  <hatapitk@iki.fi>

	* Decrease LIBVOIKKO_MAX_WORD_CHARS to prevent freezing malaga with too complicated
	  compound words.

2006-08-30 Harri Pitkänen  <hatapitk@iki.fi>

	* Look for Malaga project file voikko-fi_FI.pro instead of suomi.pro.
	* Implement the cache size parameter in voikko_init.